--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link href="css/jq-custom-hambureger-menu.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="js/jq-custom-hambureger-menu.js"></script>
-
-    <title>Менюха</title>
+    <title>Hambureger menu</title>
 </head>
 
 <body style="background-color: grey; height: 9000px">
 
-    <div class="menu-btn menu-btn--right menu-btn--close1">
+
+
+    <div class="menu-btn menu-btn_absolute menu-btn_right menu-btn_close1">
     <div class="menu-btn__icon">
-        <div class="menu-btn__line menu-btn__line--1"></div>
-        <div class="menu-btn__line menu-btn__line--2"></div>
-        <div class="menu-btn__line menu-btn__line--3"></div>
+        <div class="menu-btn__line menu-btn__line_1"></div>
+        <div class="menu-btn__line menu-btn__line_2"></div>
+        <div class="menu-btn__line menu-btn__line_3"></div>
     </div>
     </div>
 
